[tool.poetry]
name = "pyCI-tooling"

version = "0.0.0"
license = "ISC"
description = "python CI tooling and libs for my CI pipelines"

authors = ["Simon Kowallik <github@simonkowallik.com>"]
maintainers = ["Simon Kowallik <github@simonkowallik.com>"]

homepage = "https://github.com/simonkowallik/docker"
repository = "https://github.com/simonkowallik/docker"

[tool.poetry.dependencies]
yamllint = "*"
pydantic = "*"
pyyaml = "*"
pytest = "*"
boltons = "*"
detect-secrets = "*"
truffleHog = "*"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
